Closed Bug 306660 Opened 20 years ago Closed 20 years ago

[FIX]Bottom frame in frameset doesn't load.

Categories

(Core :: DOM: Core & HTML, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.8beta4

People

(Reporter: jst, Assigned: bzbarsky)

References

()

Details

(Keywords: fixed1.8, regression, Whiteboard: [has r+SR])

Attachments

(3 files)

Load the URL and click on "Airport names" and you'll get a new window. The bottom frame in that window should display help about how to search for airport names, and once you click on a letter or do a search the result should be shown in the bottom frame, but nothing is ever loaded there. This actually worked before the fix for bug 306630 landed if you triggered it by manually loading (using javascript: URLs in the opening page) one of the URLs that the page tries to load in the frameset, but due to that bug nothing loaded at all in the frames when the frameset was loaded. I don't know what's going on here yet, but I'm guessing this is somehow related to split windows. What I do see is that when you click on one of the links in the top frameset the code does set location.href for the frame, but nothing is ever loaded. I see no assertions or JS errors...
bz says he's in the know on what's going on here. We're creating layout frames for the frameset children before all the frameset children are inserted into the DOM and the frameset frame doesn't apparently deal with dynamic changes (for historic reasons), but could now... Over to bz.
Assignee: general → bzbarsky
There are two changes here. The first is to not flush layout in Close() if the document has no presshell. The second is to deal with dynamic addition/removal of frames in a frameset. Both are enough to fix this bug, but I suspect we need the latter to cover other cases where a reflow flush happens... So I made the document change just to prevent an extra reframe in this case.
Attachment #194539 - Flags: superreview?(roc)
Attachment #194539 - Flags: review?(jst)
Attachment #194540 - Flags: superreview?(roc)
Attachment #194540 - Flags: review?(jst)
Blocks: 253951
That fixes bug 198251 too.
Blocks: 198251
Priority: -- → P1
Summary: Bottom frame in frameset doesn't load. → [FIX]Bottom frame in frameset doesn't load.
Target Milestone: --- → mozilla1.8beta4
Comment on attachment 194539 [details] [diff] [review] Belt-and-suspenders patch r=jst
Attachment #194539 - Flags: review?(jst) → review+
Attachment #194540 - Flags: review?(jst) → review+
Flags: blocking1.8b5?
Flags: blocking1.8b4?
Hey guys, did this turn out to be split window fall out or a regression caused by another recent change? Or is it a regression from another change? If so, can you add the regredssion keyword? it makes it easier for the bug triage team. thanks!
This is a regression from the fix for bug 253951
Keywords: regression
Flags: blocking1.8b5?
Flags: blocking1.8b4?
Flags: blocking1.8b4+
Whiteboard: [needs review roc]
Attachment #194539 - Flags: superreview?(roc) → superreview+
Attachment #194540 - Flags: superreview?(roc) → superreview+
Whiteboard: [needs review roc] → [has r+SR]
Attachment #194540 - Flags: approval1.8b4?
Can we get this landed on the trunk so we can verify? Thanks!
Fixed. Note that the trunk patch is the one that applies to branch now...
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Verified on 9-6-08 trunk build.
Status: RESOLVED → VERIFIED
Attachment #194540 - Flags: approval1.8b4? → approval1.8b4+
Fixed on the 1.8 branch
Keywords: fixed1.8
Depends on: 370430
Depends on: 369150
Attached patch TestcasesSplinter Review
Checked in the tests.
Flags: in-testsuite+
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: