Make addition or removal of frames in a frameset actually change the rendering.  Bug 306660, r=jst, sr=roc